...
        android:layout_height="417dp"
        android:layout_below="@+id/guess_name"
        android:layout_centerInParent="true"
        android:contentDescription="@string/pic_to_guess" />

    <EditText
        android:id="@+id/quiz_photo_name"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quiz_photo2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_photo_name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quiz_photo_name"
        android:layout_centerInParent="true"
        android:layout_marginStart="166dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkButton" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_check"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/overall_score" />
...
