...

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <Button
        android:id="@+id/btnQuiz"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:text="@string/btn_play" />

    <Button
        android:id="@+id/btnDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnQuiz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/btn_database" />
...
